@@ -1,3 +1,9 @@
+Fri Aug  8 13:21:17 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* Makefile (SRCS): Delete malloc.c; libc now has a thread safe
+	malloc. 
+	(malloc.c): Delete file.
+
 Mon Jun  9 21:18:46 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* cthreads.c (cthread_fork): Delete debugging oddity that crept
